--- a/.github/workflows/pep8-check.yml
+++ b/.github/workflows/pep8-check.yml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   pep8-check:
+    runs-on: ubuntu-latest
     steps:
       - name: Python Style Checker
         uses: andymckay/pycodestyle-action@0.1.3
