--- a/.github/workflows/pep8-check.yml
+++ b/.github/workflows/pep8-check.yml
@@ -1,14 +1,8 @@
-name: Pep8 Check
+name: PEP8 Check
 
-on:
-  push:
-    branches:
-      - main
-  pull_request: {}
-
+on: [push, pull_request]
 jobs:
-  PEP8_Check:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Pep8
-        uses: andymckay/pycodestyle-action@0.1.3
+    PEP8-Check:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: andymckay/pycodestyle-action@0.1.3
