--- a/.github/workflows/pep8-check.yml
+++ b/.github/workflows/pep8-check.yml
@@ -1,8 +1,15 @@
-name: PEP8 Check
-
-on: [push, pull_request]
+name: PEP8
+on: [pull_request]
 jobs:
-    PEP8-Check:
-        runs-on: ubuntu-latest
-        steps:
-            - uses: andymckay/pycodestyle-action@0.1.3
+  run:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@master
+    - name: Setup Python 3.9
+      uses: actions/setup-python@master
+      with:
+        version: 3.9
+    - name: flake8
+      run: |
+        pip install flake8
+        flake8 . --count --show-source --statistics
